Fix an issue with all modal on all views that were attempting to hide the scrollbar and as a result it looks like the background is moving. NOW FIXED !

--- a/MatchFixer-Web-App/wwwroot/css/site.css
+++ b/MatchFixer-Web-App/wwwroot/css/site.css
@@ -38,6 +38,7 @@
 html {
     font-size: 14px;
     scroll-behavior: smooth;
+    overflow-y: scroll;
 }
 
 html, body {
